Inclusão swagger