@@ -1,24 +1,24 @@
 package br.com.fiap.postech.app.gestaoreserva.data.controllers;
 
 
-import br.com.fiap.postech.app.gestaoreserva.data.models.OpcionaisRequestModel;
 import br.com.fiap.postech.app.gestaoreserva.data.models.ReservaQuartosOcupadosResponseModel;
 import br.com.fiap.postech.app.gestaoreserva.data.models.ReservaRequestModel;
 import br.com.fiap.postech.app.gestaoreserva.domain.entities.ReservaEntity;
 import br.com.fiap.postech.app.gestaoreserva.domain.usecases.BuscarOcupacaoDosQuartosUseCase;
 import br.com.fiap.postech.app.gestaoreserva.domain.usecases.ConfirmarReservaUseCase;
 import br.com.fiap.postech.app.gestaoreserva.domain.usecases.IncluirReservaUseCase;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("reservas")
+@RequestMapping(value = "reservas", produces = "application/json")
 public class ReservaController implements ReservaApi {
 
     final IncluirReservaUseCase incluirReservaUseCase;
@@ -34,6 +34,12 @@ public class ReservaController implements ReservaApi {
         this.confirmarReservaUseCase = confirmarReservaUseCase;
     }
 
+    @Operation(summary = "Realiza a reserva", method = "POST")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Reserva realizada com sucesso"),
+            @ApiResponse(responseCode = "400", description = "Corpo da requisição contem tributo invalido"),
+            @ApiResponse(responseCode = "500", description = "Erro Interno")
+    })
     @Override
     @PostMapping(consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<?> incluir(ReservaRequestModel reservaRequestModel) {
@@ -52,6 +58,12 @@ public class ReservaController implements ReservaApi {
         }
     }
 
+    @Operation(summary = "Realiza a busca da reserva", method = "GET")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "A busca da reserva foi realizada com sucesso"),
+            @ApiResponse(responseCode = "404", description = "Reserva não encontrada"),
+            @ApiResponse(responseCode = "500", description = "Erro Interno")
+    })
     @GetMapping
     public ResponseEntity<?> buscar() {
         try {
@@ -61,12 +73,18 @@ public class ReservaController implements ReservaApi {
                     .body(ocupacoesDosQuartos
                             .stream()
                             .map(ReservaQuartosOcupadosResponseModel::new)
-                            .collect(Collectors.toList()));
+                            .toList());
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(e.getMessage());
         }
     }
 
+    @Operation(summary = "Realiza a confirmação da reserva", method = "PATCH")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Confirmação realizada com sucesso"),
+            @ApiResponse(responseCode = "404", description = "Reserva não foi processada corretamente"),
+            @ApiResponse(responseCode = "500", description = "Erro Interno")
+    })
     @PatchMapping("{id}")
     public ResponseEntity<?> confirmar(@PathVariable("id") Long id) {
         try {
